# csv-metadata-quality

./: .build.yml  .drone.yml  .gitignore  .travis.yml  CHANGELOG.md  CITATION.cff  MANIFEST.in  Pipfile  README.md  fix.py  pyproject.toml  pytest.ini  renovate.json  renovate.json5  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: python-app.yml
csv_metadata_quality/: __main__.py  app.py  check.py  experimental.py  fix.py  util.py  version.py
data/: abstract-check.csv  test-geography.csv  test.csv  test.xlsx
src/csv_metadata_quality/: __main__.py  check.py  experimental.py  fix.py  version.py
tests/: test.csv  test_check.py  test_fix.py
